--- a/editar_noticia.html
+++ b/editar_noticia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es" ng-app="main">
     <head>
-        <title>Zona deportiva</title>
+        <title>Editar equipo</title>
         <meta charset="utf-8"/>
         <meta name= "viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
@@ -50,32 +50,23 @@
             </div>
         </nav>
         <div class="container" id="cuerpo">
-            <div>
-                <h1 id = "Titulo">Noticias</h1>
-            </div>
-            <a id="cr" class="btn btn-primary" href="/nueva_noticia.html">CrearNotica</a>
-            <a  class="btn btn-primary" href="/entrenador.html">Volver</a>
-            <div ng-repeat="noticia in noticias">
-                <div class = "row deportes">
-                    <div class="col-lg-8">
-                        <div class ="datosDeporte" id= "{{ equipo.id_Equipo }}">
-                            <div>
-                                <p>Titulo:</p>
-                                <p>{{ noticia.titulo }}</p>
-                            </div>
-                            <div>
-                                <p>Noticia:</p>
-                                <p>{{ noticia.texto }}</p>
-                            </div>
+            <div class="ingreso">
+                <form>
+                    <h1>Datos</h1>
+                    <div class="form-group row">
+                        <label for="nE" class="form-control-plaintext col-sm-3 col-form-label">Titulo:</label>
+                        <div class="col-sm-9">
+                            <input type="text" name="nE" class="form-control-plaintext" id="nE" placeholder="Equipo" required="" ng-model="titulo"/>
                         </div>
                     </div>
-                    <div class = "col-lg-4">
-                        <div class="botones">
-                            <button class="btn btn-primary" ng-click="">Editar Equipo</button>
-                            <button class="btn btn-primary" ng-click="">Eliminar Equipo</button>
-                        </div>
+                    <div class="form-group row">
+                        <textarea type="textArea" name="depor" class="form-control-plaintext" id="depor" placeholder="Deporte" required="" ng-model="texto"></textarea>
                     </div>
-                </div>
+                    <div id="ad_bt">
+                        <button type="submit" class="btn btn-primary" ng-click="">Cambiar</button>
+                        <a class="btn btn-primary" ng-click="">Volver</a>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
