--- a/editar_noticia.html
+++ b/editar_noticia.html
@@ -63,8 +63,8 @@
                         <textarea type="textArea" name="depor" class="form-control-plaintext" id="depor" placeholder="Deporte" required="" ng-model="texto"></textarea>
                     </div>
                     <div id="ad_bt">
-                        <button type="submit" class="btn btn-primary" ng-click="">Cambiar</button>
-                        <a class="btn btn-primary" ng-click="">Volver</a>
+                        <button type="submit" class="btn btn-primary" ng-click="editNoticia()">Editar</button>
+                        <a class="btn btn-primary" ng-click="vaciar2()">Volver</a>
                     </div>
                 </form>
             </div>
