--- a/editar_equipo.html
+++ b/editar_equipo.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div id="ad_bt">
-                        <button type="submit" class="btn btn-primary" ng-click="edit()">Cambiar</button>
+                        <button type="submit" class="btn btn-primary" ng-click="edit()">Editar</button>
                         <a class="btn btn-primary" ng-click="vaciar()">Volver</a>
                     </div>
                 </form>
