--- a/nueva_noticia.html
+++ b/nueva_noticia.html
@@ -15,7 +15,7 @@
         <script src="https://code.angularjs.org/1.7.2/angular-resource.js"></script>
         <script src="js/aplicacion.js"></script>
     </head>
-    <body ng-controller="entrenadorController">
+    <body ng-controller="noticiaController">
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid" id="cabecera">
                 <div class="navbar-header">
@@ -54,20 +54,17 @@
                 <form>
                     <h1>Datos</h1>
                     <div class="form-group row">
-                        <label for="nE" class="form-control-plaintext col-sm-3 col-form-label">Nombre:</label>
+                        <label for="nE" class="form-control-plaintext col-sm-3 col-form-label">Titulo:</label>
                         <div class="col-sm-9">
-                            <input  name="nE" class="form-control-plaintext" id="nE" placeholder="Equipo" required="" ng-model="nequipo"/>
+                            <input type="text" name="nE" class="form-control-plaintext" id="nE" placeholder="Equipo" required="" ng-model="ntitulo"/>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="depor" class="col-sm-3 col-form-label">Deporte:</label>
-                        <div class="col-sm-9">
-                            <input name="depor" class="form-control-plaintext" id="depor" placeholder="Deporte" required="" ng-model="nnombreDeporte"/>
-                        </div>
+                        <textarea type="textArea" name="depor" class="form-control-plaintext" id="depor" placeholder="Deporte" required="" ng-model="ntexto"></textarea>
                     </div>
                     <div id="ad_bt">
-                        <button type="submit" class="btn btn-primary" ng-click="nuevo()">Crear</button>
-                        <a class="btn btn-primary" href="entrenador.html">Volver</a>
+                        <button type="submit" class="btn btn-primary" ng-click="nuevaN()">Editar</button>
+                        <a class="btn btn-primary" href="noticia.html">Volver</a>
                     </div>
                 </form>
             </div>
